--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 05 10:25:02 CET 2014
-sdk.dir=C\:\\Program Files (x86)\\Android\\android-studio\\sdk
+#Wed Nov 05 11:56:05 CET 2014
+sdk.dir=C\:\\Users\\user.YXXX\\AppData\\Local\\Android\\android-studio\\sdk
