--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
         </activity>
         <activity
             android:name="com.bravelittlescientist.android_puzzle_view.LaunchActivity"
-            android:label="@string/title_activity_launch" >
+            android:label="@string/title_activity_launch"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
